results/scraper/launchpad-without-comments/1885247
Build error in Intel 32-bit hosts

The code base is on master, checked out on Thursday June25th 2020, 0250c595c9d. The build procedure:

$ mkdir build-gcc
$ cd build-gcc
$ ../configure
$ make

The build error message is:

  CC      x86_64-softmmu/hw/hyperv/hyperv.o
  CC      x86_64-softmmu/hw/hyperv/hyperv_testdev.o
  CC      x86_64-softmmu/hw/hyperv/vmbus.o
/home/rtrk/Build/qemu-master/hw/hyperv/vmbus.c: In function ‘gpadl_iter_io’:
/home/rtrk/Build/qemu-master/hw/hyperv/vmbus.c:386:13: error: cast to pointer from integer of different size [-Werror=int-to-pointer-cast]
         p = (void *)(((uintptr_t)iter->map & TARGET_PAGE_MASK) | off_in_page);
             ^
cc1: all warnings being treated as errors
make[1]: *** [/home/rtrk/Build/qemu-master/rules.mak:69: hw/hyperv/vmbus.o] Error 1
make: *** [Makefile:527: x86_64-softmmu/all] Error 2